# find-jobs

./: README.md  TODO.md  pyproject.toml
app/: __main__.py  httpx_async_client.py  job_schema.py  main.py
app/pinterest/: __main__.py  config.py  main.py  pinterest.py  pinterest_schema.py
app/pinterest/tests/: 1.json  conftest.py  fixture_pinterest_schemas.py  test_pinterest.py
app/tests/: conftest.py  test_job_schema.py
apps/: .gitignore  LICENSE  README.md
apps/app/: httpx_async_client.py  job_schema.py
apps/app/pinterest/: pinterest.py
apps/app/pinterest/tests/: fixture_pinterest_schemas.py  test_pinterest.py
apps/app/tests/: test_job_schema.py
email/: .env.example  .gitignore  email-inlined.html  pyproject.toml
email/src/: main.py  models.py  templating.py
email/templates/: test.html.jinja
linkedin/: .gitignore  TODO.md  pyproject.toml
linkedin/src/: config.py  main.py
